--- a/htdocs/luci-static/argon/less/dark.less
+++ b/htdocs/luci-static/argon/less/dark.less
@@ -25,7 +25,7 @@
  *  Login background
  *      https://unsplash.com/
  *
- *  Licensed to the public under the Apache License 2.0 
+ *  Licensed to the public under the Apache License 2.0
  */
 
 body {
@@ -537,7 +537,7 @@ td.cbi-value-field var {
 #xhr_poll_status>.label.success {
     color: #ccc !important;
 
-    background-color: darkolivegreen !important;
+    background-color: #f90 !important;
 }
 
 .notice {
