--- a/htdocs/luci-static/argon/less/cascade.less
+++ b/htdocs/luci-static/argon/less/cascade.less
@@ -25,7 +25,7 @@
  *  Login background
  *      https://unsplash.com/
  *
- *  Licensed to the public under the Apache License 2.0 
+ *  Licensed to the public under the Apache License 2.0
  */
 
 /*
@@ -33,30 +33,30 @@
  */
 
 /*
-  *  Common Styles 
+  *  Common Styles
   */
 
 @import url("fonts.css?v=3");
 @import url("pure-min.css?v=1");
 
 :root {
-    --primary: #5e72e4;
+    --primary: #f90;
     --dark-primary: #483d8b;
     --white: #fff;
     --darker: black;
     --default: #525461;
     --background-color: #f4f5f7;
-    --warning: #fb6340;
+    --warning: #f90;
     --footer-color:#aaa;
     --menubar-background:#fff;
     --menubar-scrollbar-thumb:#f6f9fc;
     --menubar-text-color:#4c4c4c;
-    --blue: #5e72e4;
+    --blue: #f90;
     --indigo: #5603ad;
     --purple: #8965e0;
     --pink: #f3a4b5;
     --red: #f5365c;
-    --orange: #fb6340;
+    --orange: #f90;
     --yellow: #ffd600;
     --green: #2dce89;
     --teal: #11cdef;
@@ -119,7 +119,7 @@ body {
 }
 
 ::selection {
-    background-color: #5e72e4;
+    background-color: #f90;
     background-color: var(--primary);
     color: #ffffff;
     color: var(--white);
@@ -128,7 +128,7 @@ body {
 a:link,
 a:visited,
 a:active {
-    color: #5e72e4;
+    color: #f90;
     color: var(--primary);
     text-decoration: none;
 }
@@ -258,7 +258,7 @@ li {
 
                 .errorbox {
                     text-align: center;
-                    color: #fb6340;
+                    color: #f90;
                     color: var(--warning);
                     padding-bottom: 2rem;
                 }
@@ -290,7 +290,7 @@ li {
                         width: 100%;
                         height: 1px;
                         bottom: 0;
-                        border-bottom: 1px #5e72e4 solid;
+                        border-bottom: 1px #f90 solid;
                         border-bottom: 1px var(--primary) solid;
                         transform: scaleX(0);
                         transition: transform 0.3s;
@@ -348,7 +348,7 @@ li {
                 width: 100%;
                 cursor: pointer;
                 min-height: 50px;
-                background-color: #5e72e4 !important;
+                background-color: #f90 !important;
                 background-color: var(--primary) !important;
                 border-radius: 6px;
                 outline: none;
@@ -442,12 +442,12 @@ header {
         position: absolute;
         height: 2rem;
         width: 100%;
-        background-color: #5e72e4 !important;
+        background-color: #f90 !important;
         background-color: var(--primary) !important;
     }
 
     &.bg-primary {
-        background-color: #5e72e4 !important;
+        background-color: #f90 !important;
         background-color: var(--primary) !important;
     }
 
@@ -485,7 +485,7 @@ header {
 ***************************/
 
 footer {
-    
+
     text-align: right;
     padding: 1rem;
     color: #aaa;
@@ -550,7 +550,7 @@ footer {
         &::-webkit-scrollbar-thumb {
             background-color: #f6f9fc;
             background-color: var(--menubar-scrollbar-thumb);
-            
+
         }
 
         &::-webkit-scrollbar-track {
@@ -564,7 +564,7 @@ footer {
 
             .brand {
                 font-size: 1.8rem;
-                color: #5e72e4;
+                color: #f90;
                 color: var(--primary);
                 font-family: "TypoGraphica", sans-serif;
                 text-decoration: none;
@@ -622,7 +622,7 @@ footer {
                                     height: 2px;
                                     left: 0;
                                     bottom: 0;
-                                    background-color: #5e72e4;
+                                    background-color: #f90;
                                     background-color: var(--primary);
                                     transition: all 0.2s;
                                 }
@@ -662,7 +662,7 @@ footer {
                             position: absolute;
                             left: 0.8rem;
                             content: "\e915";
-                            color: #5e72e4;
+                            color: #f90;
                             color: var(--primary);
                         }
 
@@ -692,7 +692,7 @@ footer {
                         &.active {
                             cursor: pointer;
                             color: #fff;
-                            background: #5e72e4;
+                            background: #f90;
                             background: var(--primary);
 
                             a {
@@ -725,13 +725,13 @@ footer {
 
                     .menu[data-title=Status]:before {
                         content: "\e906";
-                        color: #5e72e4;
+                        color: #f90;
                         color: var(--primary);
                     }
 
                     .menu[data-title=System]:before {
                         content: "\e90a";
-                        color: #fb6340;
+                        color: #f90;
                     }
 
                     .menu[data-title=Services]:before {
@@ -771,13 +771,13 @@ footer {
 
                     .menu[data-title=Control]:before {
                         content: "\e912";
-                        color: #5e72e4;
+                        color: #f90;
                         color: var(--primary);
                     }
 
                     .menu[data-title=Asterisk]:before {
                         content: "\e914";
-                        color: #fb6340;
+                        color: #f90;
                     }
 
                     .menu[data-title=Logout]:before {
@@ -805,7 +805,7 @@ footer {
                                     height: 2px;
                                     left: 0;
                                     bottom: 0;
-                                    background-color: #5e72e4;
+                                    background-color: #f90;
                                     background-color: var(--primary);
                                     transition: all 0.2s;
                                 }
@@ -902,7 +902,7 @@ footer {
             display: block;
             text-align: center;
             margin-top: 2rem;
-            color: #5e72e4;
+            color: #f90;
             color: var(--primary);
             font-size: 2rem;
 
@@ -1009,9 +1009,9 @@ form.inline+form.inline,
 .cbi-button-edit {
 
     color: #fff !important;
-    background-color: #5e72e4 !important;
+    background-color: #f90 !important;
     background-color: var(--primary) !important;
-    border-color: #5e72e4 !important;
+    border-color: #f90 !important;
     border-color: var(--primary) !important;
 }
 
@@ -1027,8 +1027,8 @@ form.inline+form.inline,
 .cbi-section-remove>.cbi-button,
 .cbi-button-remove {
     color: #fff !important;
-    background-color: #fb6340 !important;
-    border-color: #fb6340 !important;
+    background-color: #f90 !important;
+    border-color: #f90 !important;
 }
 
 .cbi-value-field .cbi-button-add,
@@ -1182,10 +1182,10 @@ input[type="checkbox"] {
 }
 
 input[type="checkbox"]:checked {
-    border: 1px solid #5e72e4;
+    border: 1px solid #f90;
     border: 1px solid var(--primary);
     background-image: url('data:image/svg+xml,%3csvg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 8 8\'%3e%3cpath fill=\'%23fff\' d=\'M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z\'/%3e%3c/svg%3e') !important;
-    background-color: #5e72e4;
+    background-color: #f90;
     background-color: var(--primary);
     background-size: 70%;
     background-repeat: no-repeat;
@@ -1211,10 +1211,10 @@ ul li .cbi-input-checkbox {
 }
 
 .cbi-input-radio:checked {
-    border: 1px solid #5e72e4;
+    border: 1px solid #f90;
     border: 1px solid var(--primary);
     background-image: url('data:image/svg+xml,%3csvg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'-4 -4 8 8\'%3e%3ccircle r=\'3\' fill=\'%23fff\'/%3e%3c/svg%3e') !important;
-    background-color: #5e72e4;
+    background-color: #f90;
     background-color: var(--primary);
     background-size: 70%;
     background-repeat: no-repeat;
@@ -1358,7 +1358,7 @@ small {
     min-width: 0;
     padding: 0.2rem 0.6rem;
     font-size: 1.2rem;
-    color: #5e72e4 !important;
+    color: #f90 !important;
     color: var(--primary) !important;
 }
 
@@ -1401,7 +1401,7 @@ small {
 
 .cbi-section-error {
     padding: 1.5rem;
-    color: #fb6340;
+    color: #f90;
     font-weight: 600;
 }
 
@@ -1484,7 +1484,7 @@ input[name="nslookup"] {
 #conns>div>div,
 #memtotal>div>div {
     height: 100% !important;
-    background-color: #5e72e4 !important;
+    background-color: #f90 !important;
     background-color: var(--primary) !important;
 }
 
@@ -1573,7 +1573,7 @@ td>table>tbody>tr>td,
 .cbi-button-negative {
     color: #fff !important;
     border: 1px solid #d43f3a !important;
-    background-color: #fb6340 !important;
+    background-color: #f90 !important;
 }
 
 .cbi-page-actions .cbi-button-link:first-child {
@@ -1933,7 +1933,7 @@ input {
 
 select:not([multiple="multiple"]):focus,
 input:focus {
-    border-color: #5e72e4;
+    border-color: #f90;
     border-color: var(--primary);
     outline: 0;
     background-color: #fff;
@@ -2095,13 +2095,13 @@ div>.table>.tbody>.tr:nth-of-type(2n) {
 }
 
 .warning {
-    background-color: #fb6340 !important;
+    background-color: #f90 !important;
     background-color: var(--warning) !important;
     color: #fff !important;
 }
 
 .notice {
-    background-color: #5e72e4 !important;
+    background-color: #f90 !important;
     background-color: var(--primary) !important;
     color: #fff !important;
 }
@@ -2348,16 +2348,16 @@ td>table>tbody>tr>td {
     li[class~="active"],
     li:hover {
         cursor: pointer;
-        border-bottom: 0.18751rem solid #5e72e4;
+        border-bottom: 0.18751rem solid #f90;
         border-bottom: 0.18751rem solid var(--primary);
-        color: #5e72e4;
+        color: #f90;
         color: var(--primary);
         background-color: #dce1fe;
         margin-bottom: 0;
         border-radius: 0;
 
         a {
-            color: #5e72e4;
+            color: #f90;
             color: var(--primary);
         }
     }
@@ -2375,7 +2375,7 @@ td>table>tbody>tr>td {
         }
 
         &:hover {
-            border-bottom: 0.18751rem solid #5e72e4;
+            border-bottom: 0.18751rem solid #f90;
             border-bottom: 0.18751rem solid var(--primary);
         }
     }
@@ -2418,9 +2418,9 @@ td>table>tbody>tr>td {
 
         &:hover {
             cursor: pointer;
-            border-bottom: 0.18751rem solid #5e72e4;
+            border-bottom: 0.18751rem solid #f90;
             border-bottom: 0.18751rem solid var(--primary);
-            color: #5e72e4;
+            color: #f90;
             color: var(--primary);
             background-color: #dce1fe;
             margin-bottom: 0;
@@ -2432,14 +2432,14 @@ td>table>tbody>tr>td {
     }
 
     li[class~="cbi-tab"] {
-        border-bottom: 0.18751rem solid #5e72e4;
+        border-bottom: 0.18751rem solid #f90;
         border-bottom: 0.18751rem solid var(--primary);
         color: var(--primary);
         background-color: #dce1fe;
         margin-bottom: 0;
 
         a {
-            color: #5e72e4;
+            color: #f90;
             color: var(--primary);
         }
     }
@@ -2556,14 +2556,14 @@ td>table>tbody>tr>td {
 
 .cbi-dropdown[open] {
     position: relative;
-    border-color: #5e72e4;
+    border-color: #f90;
     border-color: var(--primary);
 }
 
 .cbi-dropdown[open]>ul.dropdown {
     display: block;
     background: #fff;
-    border-color: #5e72e4;
+    border-color: #f90;
     border-color: var(--primary);
     position: absolute;
     z-index: 1000;
@@ -2950,7 +2950,7 @@ td>.ifacebadge,
 }
 
 .ifacebox-head.active {
-    background: #5e72e4;
+    background: #f90;
     background: var(--primary);
     color: #fff;
 }
@@ -3173,7 +3173,7 @@ input[name="nslookup"] {
 
         div {
             border-right: 0 !important;
-            background-color: #5e72e4 !important;
+            background-color: #f90 !important;
             background-color: var(--primary) !important;
         }
     }
