--- a/htdocs/luci-static/argon/less/cascade.less
+++ b/htdocs/luci-static/argon/less/cascade.less
@@ -41,7 +41,7 @@
 
 :root {
     --primary: #f90;
-    --dark-primary: #483d8b;
+    --dark-primary: #be904c;
     --white: #fff;
     --darker: black;
     --default: #525461;
