--- a/htdocs/luci-static/argon/less/dark.less
+++ b/htdocs/luci-static/argon/less/dark.less
@@ -67,7 +67,7 @@ body {
             }
 
             .cbi-button-apply {
-                background-color: #483d8b !important;
+                background-color: #be904c !important;
                 background-color: var(--dark-primary) !important;
                 &:hover,
                 &:focus {
@@ -125,7 +125,7 @@ header::after {
                 }
 
                 .menu.active {
-                    background-color: #483d8b !important;
+                    background-color: #be904c !important;
                     background-color: var(--dark-primary) !important;
                     color: #cccccc !important;
 
@@ -141,7 +141,7 @@ header::after {
                 }
 
                 a:hover {
-                    background-color: #483d8b !important;
+                    background-color: #be904c !important;
                     background-color: var(--dark-primary) !important;
                     color: #cccccc !important;
 
@@ -179,7 +179,7 @@ h3 {
 a:-webkit-any-link {
     color: -webkit-link;
     cursor: pointer;
-    color: #483d8b;
+    color: #be904c;
     color: var(--dark-primary);
 }
 
@@ -192,15 +192,15 @@ input:-webkit-autofill {
 .cbi-button-apply,
 .cbi-button-edit {
     color: #fff !important;
-    background-color: #483d8b !important;
+    background-color: #be904c !important;
     background-color: var(--dark-primary) !important;
-    border-color: #483d8b !important;
+    border-color: #be904c !important;
     border-color: var(--dark-primary) !important;
 }
 
 
 .cbi-section em {
-    color: #483d8b;
+    color: #be904c;
     color: var(--dark-primary);
 }
 
@@ -315,7 +315,7 @@ table>thead>tr>th {
 }
 
 abbr {
-    color: #483d8b;
+    color: #be904c;
     color: var(--dark-primary);
 
 }
@@ -352,7 +352,7 @@ div>.table>.tbody>.tr:nth-of-type(2n) {
 
 .tabs>li[class~="active"],
 .tabs>li:hover {
-    border-bottom: 0.18751rem solid #483d8b;
+    border-bottom: 0.18751rem solid #be904c;
     border-bottom: 0.18751rem solid var(--dark-primary);
     color: #ccc;
     background-color: #181819;
@@ -406,7 +406,7 @@ input {
 
 select:not([multiple="multiple"]):focus,
 input:focus {
-    border-color: #483d8b !important;
+    border-color: #be904c !important;
     border-color: var(--dark-primary) !important;
     background-color: transparent;
     outline: 0;
@@ -485,7 +485,7 @@ select {
 
 div.cbi-value var,
 td.cbi-value-field var {
-    color: #483d8b;
+    color: #be904c;
     color: var(--dark-primary);
 }
 
@@ -516,7 +516,7 @@ td.cbi-value-field var {
 }
 
 .node-services-vssr .cbi-section-table-row.fast {
-    background: #483d8b !important;
+    background: #be904c !important;
     background: var(--dark-primary) !important;
     color: #fff;
 }
@@ -541,7 +541,7 @@ td.cbi-value-field var {
 }
 
 .notice {
-    background-color: #483d8b !important;
+    background-color: #be904c !important;
     background-color: var(--dark-primary) !important;
 }
 
@@ -569,7 +569,7 @@ td.cbi-value-field var {
 .cbi-button-apply.important,
 .cbi-button-reload.important,
 .cbi-button-action.important {
-    border: 1px #483d8b solid !important;
+    border: 1px #be904c solid !important;
     border: 1px var(--dark-primary) solid !important;
 }
 
